--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -153,13 +153,13 @@ html, body {
 
   // This is the currently selected ToC entry 
   .toc-link.active {
-    background-color: #a3a3a3;
-    color: #000;
+    background-color: #230336;
+    color: #fff;
   }
 
   // this is parent links of the currently selected ToC entry
   .toc-link.active-parent {
-    background-color: #144378;
+    background-color: #230336;
     color: #fff;
   }
 
@@ -268,7 +268,7 @@ html, body {
   
   .dark-box {
     width: $examples-width;
-    background-color: #144378;
+    background-color: #230336;
     position: absolute;
     right: 0;
     top: 0;
@@ -359,10 +359,9 @@ html, body {
     margin-bottom: $h1-margin-bottom;
     margin-top: 2em;
     border-top: 0px solid #FCB601;
-    border-bottom: 0px solid #FCB601;
-    background-color: #144378; // #5F1C87
-    color:#eee;
-    margin-right: 1px;
+    border-bottom: 0px solid #fff;
+    background-color: #fff; // #5F1C87
+    color:#230336;
   }
 
   h1:first-child, div:first-child + h1 {
