--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -73,13 +73,13 @@ under the License.
     <% end %>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8NN2RZ765V"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2BRS2DSVKQ"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-8NN2RZ765V');
+      gtag('config', 'G-2BRS2DSVKQ');
     </script>
 
   </head>
